[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/Rock_Strike.gd" type="Script" id=1]
[ext_resource path="res://images/skill_sprites/rock_spike.png" type="Texture" id=2]

[node name="Area2D" type="Area2D"]
scale = Vector2( 0.4, 0.4 )
z_index = -1
collision_layer = 8
collision_mask = 2
script = ExtResource( 1 )

[node name="ProjectileSprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
vframes = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -79.1837, 21.6057, -95.4479, 37.139, 123.845, 35.8598, 128.962, -37.0551, 91.5637, 6.25051, 76.3316, -23.8976, 40.0773, 16.4459, 25.5287, -8.7298, 1.4908, 19.8328, -27.6498, 6.9862, -51.4671, 35.9709 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.17
one_shot = true
autostart = true

[node name="DespawnTimer" type="Timer" parent="."]
one_shot = true
[connection signal="body_entered" from="." to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="DespawnTimer" to="." method="_on_DespawnTimer_timeout"]
